# todos-api

./: .env  Cargo.toml  docker-compose.yml
migrations/: 20240316230107_init.up.sql
src/: config.rs  handlers.rs  main.rs  models.rs  state.rs
