[package]
name = "todos-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenv = "0.15.0"
serde = {version = "1.0.197", features=["derive"]}
serde_json = "1.0.1"
sqlx = {version = "0.7.4", features = ["runtime-tokio", "postgres"]}
tokio = {version = "1.36.0", features = ["full"]}
tower = "0.4.13"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
